Basic GC tuning: sizing permgen and metaspace